@@ -1,3 +1,9 @@
+2013-05-28  Niibe Yutaka  <gniibe@fsij.org>
+
+	* chopstx.c (chopstx_intr_wait): Rename from chopstx_wait_intr.
+	(chopstx_usec_wait): Rename from chosptx_usleep.
+	(chopstx_cancel, chopstx_testcancel): New.
+
 2013-05-27  Niibe Yutaka  <gniibe@fsij.org>
 
 	* chopstx.c (chx_fatal, chopstx_exit, chopstx_join): New.
